# yuuswarm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  USAGE.md  justfile  pyproject.toml  rebuild.sh  yuuskel.toml
rust_engine/: Cargo.toml  pyproject.toml
rust_engine/src/: lib.rs
scripts/: array_job.slurm  dataloader.py  generate_config.py  main.py  manage_experiments.py  merge_job.slurm  merge_results.py  submit.slurm  submit_all.sh
scripts/analysis/: visualize_animation.py
scripts/results_N1000_D2DS2_RK2/: metadata.json
src/: Engine.hpp  ExperimentConfig.hpp  Integrator.hpp  Models.hpp  NpzWriter.hpp  engine.py  integrator.py  main.cpp  model.py  simulation.py  types.hpp  user_model.py
src/python/: engine.py  integrator.py  load.py
