[project]
name = "swarmlators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numbakit-ode>=0.5",
    "numpy>=2.3.4",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.14.4",
    "scipy>=1.16.3",
]
