[project]
name = "swarmlators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "maturin>=1.10.2",
    "numba>=0.62.1",
    "numbakit-ode>=0.5",
    "numpy>=2.3.5",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.6",
    "scipy>=1.16.3",
]